markdown-pages/en/tidb/release-6.2/tidb-lightning/tidb-lightning-overview.md
---
title: TiDB Lightning Overview
summary: Learn about Lightning and the whole architecture.
aliases: ['/docs/dev/tidb-lightning/tidb-lightning-overview/','/docs/dev/reference/tools/tidb-lightning/overview/']
---

# TiDB Lightning Overview

[TiDB Lightning](https://github.com/pingcap/tidb-lightning) is a tool used for importing data at TB scale to TiDB clusters. It is often used for initial data import to TiDB clusters.

TiDB Lightning supports the following file formats:

- Files exported by [Dumpling](/dumpling-overview.md)
- CSV files
- [Apache Parquet files generated by Amazon Aurora](/migrate-aurora-to-tidb.md)

TiDB Lightning can read data from the following sources:

- Local
- [Amazon S3](/br/backup-and-restore-storages.md#s3-url-parameters)
- [Google Cloud Storage](/br/backup-and-restore-storages.md#gcs-url-parameters)

## TiDB Lightning architecture

![Architecture of TiDB Lightning tool set](https://download.pingcap.com/images/docs/tidb-lightning-architecture.png)

TiDB Lightning supports two import modes, configured by `backend`. The import mode determines the way data is imported into TiDB.

- [Physical Import Mode](/tidb-lightning/tidb-lightning-physical-import-mode.md): TiDB Lightning first encodes data into key-value pairs and stores them in a local temporary directory, then uploads these key-value pairs to each TiKV node, and finally calls the TiKV Ingest interface to insert data into TiKV's RocksDB. If you need to perform initial import, consider physical import mode, which has higher import speed.

- [Logical Import Mode](/tidb-lightning/tidb-lightning-backends.md#tidb-backend): TiDB Lightning first encodes the data into SQL statements and then runs these SQL statements directly for data import. If the cluster to be imported is in production, or if the target table to be imported already contains data, use logical import mode.

| Import mode | Physical Import Mode | Logical Import Mode |
|:---|:---|:---|
| Speed | Fast (100~500 GiB/hour) | Low (10~50 GiB/hour)|
| Resource consumption| High | Low |
| Network bandwidth consumption | High | Low |
| ACID compliance during import | No | Yes |
| Target tables | Must be empty | Can contain data |
| TiDB cluster version | >= 4.0.0 | All |
| Whether the TiDB cluster can provide service during import | [Limited service](/tidb-lightning/tidb-lightning-physical-import-mode.md#limitations) | Yes |

<Note>
The preceding performance data is used to compare the import performance difference between the two modes. The actual import speed is affected by various factors such as hardware configuration, table schema, and the number of indexes.
</Note>
