markdown-pages/en/tidb/release-8.0/tidb-lightning/tidb-lightning-overview.md
---
title: TiDB Lightning Overview
summary: Learn about Lightning and the whole architecture.
---

# TiDB Lightning Overview

[TiDB Lightning](https://github.com/pingcap/tidb/tree/master/lightning) is a tool used for importing data at TB scale to TiDB clusters. It is often used for initial data import to TiDB clusters.

TiDB Lightning supports the following file formats:

- Files exported by [Dumpling](/dumpling-overview.md)
- CSV files
- [Apache Parquet files generated by Amazon Aurora](/migrate-aurora-to-tidb.md)

TiDB Lightning can read data from the following sources:

- Local
- [Amazon S3](/external-storage-uri.md#amazon-s3-uri-format)
- [Google Cloud Storage](/external-storage-uri.md#gcs-uri-format)

> **Note:**
>
> Compared with TiDB Lightning, the [`IMPORT INTO`](/sql-statements/sql-statement-import-into.md) statement can be directly executed on TiDB nodes, supports automated distributed task scheduling and [TiDB Global Sort](/tidb-global-sort.md), and offers significant improvements in deployment, resource utilization, task configuration convenience, ease of invocation and integration, high availability, and scalability. It is recommended that you consider using `IMPORT INTO` instead of TiDB Lightning in appropriate scenarios.

## TiDB Lightning architecture

![Architecture of TiDB Lightning tool set](https://docs-download.pingcap.com/media/images/docs/tidb-lightning-architecture.png)

TiDB Lightning supports two import modes, configured by `backend`. The import mode determines the way data is imported into TiDB.

- [Physical Import Mode](/tidb-lightning/tidb-lightning-physical-import-mode.md): TiDB Lightning first encodes data into key-value pairs and stores them in a local temporary directory, then uploads these key-value pairs to each TiKV node, and finally calls the TiKV Ingest interface to insert data into TiKV's RocksDB. If you need to perform initial import, consider the physical import mode, which has higher import speed. The backend for the physical import mode is `local`.

- [Logical Import Mode](/tidb-lightning/tidb-lightning-logical-import-mode.md): TiDB Lightning first encodes the data into SQL statements and then runs these SQL statements directly for data import. If the cluster to be imported is in production, or if the target table to be imported already contains data, use the logical import mode. The backend for the logical import mode is `tidb`.

| Import mode | Physical Import Mode | Logical Import Mode |
|:---|:---|:---|
| Backend | `local` | `tidb` |
| Speed | Fast (100~500 GiB/hour) | Low (10~50 GiB/hour)|
| Resource consumption| High | Low |
| Network bandwidth consumption | High | Low |
| ACID compliance during import | No | Yes |
| Target tables | Must be empty | Can contain data |
| TiDB cluster version | >= 4.0.0 | All |
| Whether the TiDB cluster can provide service during import | [Limited service](/tidb-lightning/tidb-lightning-physical-import-mode.md#limitations) | Yes |

<Note>

The preceding performance data is used to compare the import performance difference between the two modes. The actual import speed is affected by various factors such as hardware configuration, table schema, and the number of indexes.

</Note>
